--- a/outro.html
+++ b/outro.html
@@ -209,13 +209,23 @@ we have done together
       <img src="media/images/previous-button.svg" alt="Last Track" class="track-image-button">
     </a>
   </div>
-  <div class="nav-slot center">
+
+  <div class="nav-slot center-left">
     <a href="index.html">
       <img src="media/images/rewind-button.svg" alt="Rewind Tape to Intro" class="track-image-button">
     </a>
   </div>
+
+  <div class="nav-slot center-right">
+    <a href="references.html">
+      <img src="media/images/references-body-button.svg" alt="References" class="track-image-button">
+    </a>
+  </div>
+
   <div class="nav-slot right">
-    
+    <a href="author.html">
+      <img src="media/images/author-body-button.svg" alt="Author" class="track-image-button">
+    </a>
   </div>
 </div>
 
