--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
   <div class="nav-inner">
     <nav>
       <a href="index.html">
-        <img src="media/images/nav-intro.png" alt="Intro">
+        <img src="media/images/nav-intro.svg" alt="Intro">
       </a>
       <div class="dropdown">
-        <span><img src="media/images/nav-theory.png" alt="Theoretical Conversations"></span>
+        <span><img src="media/images/nav-theory.svg" alt="Theoretical Conversations"></span>
         <div class="dropdown-content">
           <a href="recife.html">Recife to Ferguson</a>
           <a href="long-as-i-live.html">Long as I Live</a>
         </div>
       </div>
       <div class="dropdown">
-        <span><img src="media/images/nav-methods.png" alt="Remixed Methods"></span>
+        <span><img src="media/images/nav-methods.svg" alt="Remixed Methods"></span>
         <div class="dropdown-content">
           <a href="realm-of-entities.html">Realm of Entities</a>
           <a href="poem-is-research.html">The Poem is the Research</a>
         </div>
       </div>
       <div class="dropdown">
-        <span><img src="media/images/nav-praisesongs.png" alt="Praisesongs"></span>
+        <span><img src="media/images/nav-praisesongs.svg" alt="Praisesongs"></span>
         <div class="dropdown-content">
           <a href="edsel-song.html">Edsel’s Song</a>
           <a href="aaleah-song.html">Aaleah’s Song</a>
@@ -40,13 +40,13 @@
         </div>
       </div>
       <a href="outro.html">
-        <img src="media/images/nav-outro.png" alt="Outro">
+        <img src="media/images/nav-outro.svg" alt="Outro">
       </a>
       <a href="references.html">
-        <img src="media/images/nav-references.png" alt="References">
+        <img src="media/images/nav-references.svg" alt="References">
       </a>
       <a href="author.html">
-        <img src="media/images/nav-author.png" alt="Author">
+        <img src="media/images/nav-author.svg" alt="Author">
       </a>
     </nav>
   </div>
