--- a/edsel-song.html
+++ b/edsel-song.html
@@ -13,12 +13,12 @@
     </a>
     <nav>
       <a href="index.html">
-        <img src="media/images/nav-intro.png" alt="Intro">
+        <img src="media/images/nav-intro.svg" alt="Intro">
       </a>
 
       <div class="dropdown">
         <span>
-          <img src="media/images/nav-theory.png" alt="Theoretical Conversations">
+          <img src="media/images/nav-theory.svg" alt="Theoretical Conversations">
         </span>
         <div class="dropdown-content">
           <a href="recife.html">Recife to Ferguson</a>
@@ -28,7 +28,7 @@
 
       <div class="dropdown">
         <span>
-          <img src="media/images/nav-methods.png" alt="Remixed Methods">
+          <img src="media/images/nav-methods.svg" alt="Remixed Methods">
         </span>
         <div class="dropdown-content">
           <a href="realm-of-entities.html">Realm of Entities</a>
@@ -38,7 +38,7 @@
 
       <div class="dropdown">
         <span>
-          <img src="media/images/nav-praisesongs.png" alt="Praisesongs">
+          <img src="media/images/nav-praisesongs.svg" alt="Praisesongs">
         </span>
         <div class="dropdown-content">
           <a href="edsel-song.html">Edsel’s Song</a>
@@ -49,15 +49,15 @@
       </div>
 
       <a href="outro.html">
-        <img src="media/images/nav-outro.png" alt="Outro">
+        <img src="media/images/nav-outro.svg" alt="Outro">
       </a>
 
       <a href="references.html">
-        <img src="media/images/nav-references.png" alt="References">
+        <img src="media/images/nav-references.svg" alt="References">
       </a>
 
       <a href="author.html">
-        <img src="media/images/nav-author.png" alt="Author">
+        <img src="media/images/nav-author.svg" alt="Author">
       </a>
     </nav>
   </header>
