--- a/recife.html
+++ b/recife.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Mooney, Waveforms - Recife to Ferguson</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
   <a href="#main" class="skip-link" tabindex="0">Skip to main content</a>
