--- a/aaleah-song.html
+++ b/aaleah-song.html
@@ -259,7 +259,7 @@ spiritual space
 <p>Aaleah and I recalled that poem and she discussed what it meant for her then, and how she sees it now as a young adult. She remembered how “empowering” it felt to “create worlds on paper.” That poem took on new meaning after she shared with me a painful experience about a temporary period of time during her adolescence in which her family was temporarily without a home. Aaleah described living out of a hotel with her siblings and parents, all sharing one room with no privacy. She talked about brief moments of joy, usually on a holiday, in which they came together to “reconvene” as a family. Aaleah recalled the difficulty of this time and shared about the ways poetry helped her process what was happening in her life. Her use of the word “reconvene” prompted us to consider our learning community as a site of reconvening our humanity. The song we composed together functions as a <em>reconvening of sounds</em>.</p>
 
 <figure class="participant-image-float-left">
-  <img src="media/images/aaleah-blackbox.jpg" alt="Aaleah performing spoken word at Word Up! under a single overhead stage light.">
+  <img src="media/images/aaleah-blackbox.jpg" alt="Aaleah performing spoken word at Word Up! under a single overhead stage light." loading="lazy">
   <figcaption>Figure 4: Aaleah performing at <em>Word Up</em>. Surrounded by the audience and illuminated by a single overhead stage light in the Black Box Theater, this moment helped inspire the collaborative composition that became “Aaleah’s Song.””</figcaption>
 </figure>
 
