--- a/edsel-song.html
+++ b/edsel-song.html
@@ -279,7 +279,7 @@ we’re all one right now
 <p>Edsel is a Filipino American from Jersey City, New Jersey. During our conversations, he talked about his cultural heritage with love, appreciation, and gratitude. He described his personal relationship to Hip Hop and reflected on the Filipino American experience, questioning the impact of Spanish colonization and what that means for him as a person living in the United States who identifies with Hip Hop culture. He shared that our work in the slam poetry club and Hip Hop Lit class, particularly the ways we cultivated knowledge of self, helped him become interested in learning more about his home country, its history, and its relationship to the United States. Edsel expressed his passion for learning about the Philippines prior to Spanish colonization, which prompted us to look for sounds that spoke to the Indigenous cultures and histories of the Philippines.</p>
 
 <figure class="participant-image-float-right">
-  <img src="media/images/edsel-blackbox.jpg" alt="Edsel performing spoken word at Word Up! in the Black Box Theater.">
+  <img src="media/images/edsel-blackbox.jpg" alt="Edsel performing spoken word at Word Up! in the Black Box Theater." loading="lazy">
   <figcaption> Figure 3: Edsel performing a spoken word poem at <em>Word Up</em> in the Black Box Theater. This performance was later sampled for his praisesong.</figcaption>
 </figure>
    
