--- a/fatmata-song.html
+++ b/fatmata-song.html
@@ -305,7 +305,7 @@ I was just like, wow we did something really incredible
 <p>When I asked Fatmata what she was most proud of about the younger version of herself, she stated, “I’m most proud of the fact that even though I couldn’t see past what was going on, I kept going.” While I knew about some of the challenges she faced in high school, others I was unaware of, including her dyslexia. I didn’t have Fatmata in my traditional English courses during the day, so we only worked together in an extracurricular context after school through the slam poetry club. I wasn’t invested in “grading” her writing or assessing it in a formal sense. She asked, “Do you have to write a certain way to be considered literate?” as she reflected back on her challenges with reading and writing.</p>
 
 <figure class="participant-image-float-left">
-  <img src="media/images/fatmata-blackbox.jpg" alt="Fatmata performing spoken word at Word Up!, reading from the page into the mic.">
+  <img src="media/images/fatmata-blackbox.jpg" alt="Fatmata performing spoken word at Word Up!, reading from the page into the mic." loading="lazy">
   <figcaption>Figure 6: Fatmata performing at <em>Word Up</em>. Reading from the page while speaking into the mic, she balances vulnerability and humor, rhetorical qualities heard in her praisesong.</figcaption>
 </figure>
 
