--- a/otto-song.html
+++ b/otto-song.html
@@ -251,7 +251,7 @@ so thank you from the bottom of my heart
 <p>Another hobby that Otto took up in recent years is making custom computer keyboards. We decided to sample the sound of Otto pressing buttons on one of these keyboards as a texture for the track. This sample became a layer of percussion in the final composition. During high school, Otto played guitar as a music major in our high school’s performing arts department. I asked if they had any old recordings we could sample for the song. Otto told me they still had “all these [unfinished] tunes and riffs and licks.” After a little searching, we found an old recording of Otto playing guitar, which makes up one of the melodic leads for the song we composed together. This blend of guitar riffs, keyboard sounds, and game aesthetics functions as both sonic data and symbolic texture, a personalized soundscape that embodies Otto’s layered intersectional identities.</p>
 
 <figure class="participant-image-float-right">
-  <img src="media/images/otto-blackbox.jpg" alt="Otto performing spoken word at Word Up! with arms outstretched, addressing the audience in the Black Box Theater.">
+  <img src="media/images/otto-blackbox.jpg" alt="Otto performing spoken word at Word Up! with arms outstretched, addressing the audience in the Black Box Theater." loading="lazy">
   <figcaption>Figure 5: Otto performing at <em>Word Up</em>. With arms outstretched and voice amplified by the mic, Otto addresses a sold-out crowd in the Black Box Theater during a moment that inspired our co-authored praisesong.</figcaption>
 </figure>
     
