--- a/poem-is-research.html
+++ b/poem-is-research.html
@@ -173,7 +173,7 @@ undress for anyone other than itself
 
 <h2>Poetry as Method or / Letting the Poem Speak for Itself</h2>
     
-<p>In qualitative research, there are many ways to employ narrative inquiry and its variations, including poetic inquiry. But one form of (re)searching especially interested me: the poem itself as research&mdash;not as reflection or artifact, but as method. I’m interested in the poem as a way of intentionally, systematically, and reflexively rendering experience through a structured system of linguistic representation. For me, poetry offers opportunities to theorize, abstract, and know more deeply. Spoken word is a truth-telling form. I first began to understand this when a student performed a spoken word piece about gentrification in his city. The poem questioned, theorized, and made an argument using lived experience as data. It had all the qualities that teachers of writing want in traditional research papers. Yet, our impulse to explain is great. As teachers and researchers, we have been trained to do this:</p>
+<p>In qualitative research, there are many ways to employ narrative inquiry and its variations, including poetic inquiry. But one form of (re)searching especially interested me: the poem itself as research. The poem as method. I’m interested in the poem as a way of intentionally, systematically, and reflexively rendering experience through a structured system of linguistic representation. For me, poetry offers opportunities to theorize, abstract, and know more deeply. Spoken word is a truth-telling form. I first began to understand this when a student performed a spoken word piece about gentrification in his city. The poem questioned, theorized, and made an argument using lived experience as data. It had all the qualities that teachers of writing want in traditional research papers. Yet, our impulse to explain is great. As teachers and researchers, we have been trained to do this:</p>
 
 <p style="margin-left: 2em; font-style: italic;">
   our voices hover, linger,<br>
@@ -215,7 +215,7 @@ undress for anyone other than itself
 left only the remnants.<br>
 what’s left is everything</em></p>
 
-<p>Meaning emerges not only in what is preserved, but in what is strategically removed. The results are new compositions, research poems that pulse with absence and presence in equal measure.</p>
+<p>Meaning emerges not only in what is preserved, but in what is strategically removed. The results are new compositions, research poems that sound within and beyond the waveforms.</p>
 
   <div class="track-nav">
   <a href="realm-of-entities.html">
