--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <body>
   <a href="#main" class="skip-link" tabindex="0">Skip to main content</a>
  <header>
+ <div class="banner-container">
   <a href="index.html">
     <img src="media/images/banner.jpg" alt="Waveforms webtext banner" class="banner-image">
   </a>
+</div>
   <div class="nav-inner">
     <nav>
       <a href="index.html">
