--- a/references.html
+++ b/references.html
@@ -184,6 +184,10 @@
 <p>Sousanis, Nick. (2015). <em>Unflattening.</em> Harvard University Press.</p>
 
 <p>Sterne, Jonathan. (Ed.). (2012). <em>The sound studies reader.</em> Routledge.</p>
+
+<h4>AI Statement</h4>
+<p>In the process of designing and coding this webtext, I used generative AI (ChatGPT by OpenAI) in a supportive role to assist with writing, refining, and minifying CSS and HTML code, as well as troubleshooting layout and accessibility issues. All creative decisions about content, design, structure, and implementation were solely my own. I reviewed and approved all AI-assisted output to ensure accuracy and alignment with my vision for the project.</p>
+
 </main>
 
 <footer>
