--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Mooney, Waveforms - Intro</title>
-    <link rel="stylesheet" href="css/styles.min.css">
-  </head>
+ <head>
+  <meta charset="utf-8">
+  <title>Mooney, Waveforms - Intro</title>
+  <link rel="stylesheet" href="css/styles.min.css">
+  <link rel="stylesheet" href="css/styles-extra.css">
+</head>
   <body>
     <a href="#main" class="skip-link" tabindex="0">Skip to main content</a>
     <header>
