--- a/references.html
+++ b/references.html
@@ -57,6 +57,7 @@
     </header>
     <main id="main" class="content-wrap">
       <h1>References</h1>
+      <p>Aguilar, Vanessa J., Bravo, Stephany, Craig, Todd, Milburn, Jared D., Petchauer, Emery, Rodriguez, Eric M., Valenzuela, Cecilia, &amp; Landa-Posas, Magnolia. (2020). Testimonios and turntables: Claiming our narratives through sound and space. <em>Kairos: A Journal of Rhetoric, Technology, and Pedagogy</em>, 25(1). <a href="https://kairos.technorhetoric.net/25.1/praxis/craig-et-al">https://kairos.technorhetoric.net/25.1/praxis/craig-et-al</a></p>
       <p>Akom, Antwi A. (2009). <em>Critical hip hop pedagogy as a form of liberatory praxis.</em> Equity and Excellence in Education, 42(1), 52–66. <a href="https://doi.org/10.1080/10665680802612519" target="_blank">https://doi.org/10.1080/10665680802612519</a></p>
       <p>Algarin, Miguel., & Holman, Bob. (1994). <em>Aloud: Voices from the Nuyorican Poets Cafe.</em> Henry Holt and Company.</p>
       <p>Alim, H. Samy. (2006). <em>Roc the mic right: The language of hip hop culture.</em> Routledge.</p>
