--- a/author.html
+++ b/author.html
@@ -62,7 +62,7 @@
       <p>He can be contacted at <a href="mailto:b.mooney@fdu">b.mooney@fdu</a>.</p>
     </main>
     <footer>
-      Brian Mooney 2025
+      &copy; 2025 Brian Mooney
     </footer>
   </body>
 </html>
