--- a/author.html
+++ b/author.html
@@ -59,7 +59,7 @@
       <h1>Author</h1>
       <p>Dr. Brian Mooney is a teacher-educator, scholar, multimedia artist, and author from New Jersey, USA. He is currently an Assistant Professor of Literacy Education at Fairleigh Dickinson University. His research explores the intersections of language, literacy, and popular culture, with a focus on critical Hip Hop and spoken word literacies.</p>
       <p>In June 2015, Dr. Mooney’s teaching caught the attention of Pulitzer Prize-winning Hip Hop artist Kendrick Lamar and resulted in a school visit by the rapper. Dr. Mooney’s first book, <em>Breakbeat Pedagogy: Hip Hop and Spoken Word Beyond the Classroom Walls</em>, was published in September 2016. His work has been featured by <em>The New York Times</em>, BBC, <em>Rolling Stone</em>, NBC, MTV, and NPR.</p>
-      <p>He can be contacted at <a href="mailto:b.mooney@fdu">b.mooney@fdu</a>.</p>
+      <p>He can be contacted at <a href="mailto:b.mooney@fdu.edu">b.mooney@fdu.edu</a>.</p>
     </main>
     <footer>
       &copy; 2025 Brian Mooney
