--- a/references.html
+++ b/references.html
@@ -65,11 +65,16 @@
       <p>Bakhtin, Mikhail M. (1981). <em>The dialogic imagination: Four essays.</em> University of Texas Press.</p>
       <p>Bakhtin, Mikhail M., & Emerson, Caryl. (1984). <em>Problems of Dostoevsky’s poetics.</em> University of Minnesota Press.</p>
       <p>Best, Amy L. (2007). <em>Representing youth: Methodological issues in critical youth studies.</em> NYU Press.</p>
+      <p>Butler, Judith. (1990). <em>Gender trouble: Feminism and the subversion of identity.</em> Routledge.</p>
       <p>Cage, John. (1939). <em>Imaginary landscape No. 1.</em> Edition Peters.</p>
+      <p>Carson, A. D. (2017). <em>Owning my masters: The rhetorics of rhymes and revolutions.</em> All Dissertations. 1885. <a href="https://tigerprints.clemson.edu/all_dissertations/1885" target="_blank">https://tigerprints.clemson.edu/all_dissertations/1885</a></p>
+      <p>Carson, A. D. (2020). <em>i used to love to dream.</em> University of Michigan Press. <a href="https://doi.org/10.3998/mpub.11738372" target="_blank"> https://doi.org/10.3998/mpub.11738372</a></p>
+      <p>Ceraso, Stephanie. (2018). <em>Sounding composition: Multimodal pedagogies for embodied listening.</em> University of Pittsburgh Press.</p>
       <p>Chion, Michel. (1994). <em>Audio-vision: Sound on screen.</em> Columbia University Press.</p>
       <p>Boal, Augusto. (1979). <em>Theater of the oppressed.</em> Pluto Press.</p>
       <p>Camangian, Patrick. (2008). Untempered tongues: Teaching performance poetry for social justice. <em>English Teaching: Practice and Critique,</em> 7(2), 35–55.</p>
       <p>Coval, Kevin., Lansana, Quraysh Ali., & Marshall, Nate. (Eds.). (2015). <em>The breakbeat poets: New American poets in the age of hip-hop.</em> Haymarket Books.</p>
+       <p>Danforth, Courtney S., Stedman, Kyle D., & Faris, Michael J. (Eds.). (2018). <em>Soundwriting pedagogies.</em> Logan, UT: Computers and Composition Digital Press / Utah State University Press. Retrieved from <a href="http://ccdigitalpress.org/soundwriting" target="_blank">http://ccdigitalpress.org/soundwriting</a>http://ccdigitalpress.org/soundwriting.</p>
       <p>Dillard, Cynthia B. (2008). Re‐membering culture: Bearing witness to the spirit of identity in research. <em>Race Ethnicity and Education,</em> 11(1), 87–93. <a href="https://doi.org/10.1080/13613320701845848" target="_blank">https://doi.org/10.1080/13613320701845848</a></p>
       <p>Dillard, Cynthia B. (2011). Learning to remember the things we’ve learned to forget: Endarkened feminisms and the sacred nature of research. In N. K. Denzin & M. D. Giardina (Eds.), <em>Qualitative inquiry and global crises</em> (pp. 226–243). Routledge.</p>
       <p>Faulkner, Sandra L. (2017). Poetic inquiry: Poetry as/in/for social research. In P. Leavy (Ed.), <em>The handbook of arts-based research</em> (pp. 208–230). Guilford.</p>
@@ -107,15 +112,26 @@
       <p>Nafis, Angel. (2011). Be Blk!. <em>Union Station Magazine.</em></p>
       <p>Navas, Eduardo, burrough, xtine, & Gallagher, Owen. (Eds.) (2021). <em>The Routledge handbook of remix studies and digital humanities.</em> Routledge.</p>
       <p>Paik, Nam Jun, & Godfrey, John. (1973). Global groove. [Video file]. YouTube. <a href="https://www.youtube.com/watch?v=7UXwhIQsYXY" target="_blank">https://www.youtube.com/watch?v=7UXwhIQsYXY</a></p>
+      <p>Perez, Vincente Glynn. (2025). <em>Sonic Blackness: Hip-Hop poetics.</em> UC Berkeley. ProQuest ID: <a href="https://www.proquest.com/LegacyDocView/DISSNUM/32235987" target="_blank">
+    32235987
+  </a>. 
+  Retrieved from 
+  <a href="https://escholarship.org/uc/item/8f52279r" target="_blank">
+    https://escholarship.org/uc/item/8f52279r
+  </a>.
+</p>
       <p>Petchauer, Emery., & Brown, Ruth Nicole. (2022). With reverence: An actuality of collective formation. <em>Forms of Freedom.</em> <a href="https://formsoffreedom.com/With-Reverence" target="_blank">https://formsoffreedom.com/With-Reverence</a></p>
       <p>Petchauer, Emery., & Brown, Ruth Nicole. (2023). The second sound of integrity: Us whole. <em>Seismograf Peer.</em> <a href="https://doi.org/10.48233/09" target="_blank">https://doi.org/10.48233/09</a></p>
       <p>Pinch, Trevor, & Bijsterveld, Karin. (2004). Sound studies: New technologies and music. <em>Social Studies of Science,</em> 34, 635–648.</p>
       <p>Pinch, Trevor, & Bijsterveld, Karin. (Eds.). (2012). <em>The Oxford handbook of sound studies.</em> Oxford University Press.</p>
       <p>Prendergast, Monica., Leggo, Carl., & Sameshima, Pauline. (2009). <em>Poetic inquiry: Vibrant voices in the social sciences.</em> Sense.</p>
       <p>Richardson, Elaine. (2007). <em>Hiphop literacies.</em> Routledge.</p>
+       <p>Rickert, Thomas & Salvo, Michael. (2006). The distributed Gesamptkunstwerk: Sound, worlding, and new media culture.  <em>Computers and Composition,</em> 23 (3), 296-316.</p>
       <p>Rodrigue, Tanya K., et al. (2016). Navigating the soundscape, composing with audio. <em>Kairos: A Journal of Rhetoric, Technology, and Pedagogy,</em> 21(1). <a href="https://kairos.technorhetoric.net/21.1/praxis/rodrigue/index.html" target="_blank">https://kairos.technorhetoric.net/21.1/praxis/rodrigue/index.html</a></p>
       <p>Rose, Tricia. (1994). <em>Black noise: Rap music and black culture in contemporary America.</em> University Press of New England.</p>
       <p>Rosenblatt, Louise M. (1938). <em>Literature as exploration.</em> D. Appleton-Century.</p>
+       <p>Schicke, Joe & Weedon, Scott. (2025). The band feeling: Getting intentional about soundwriting and sonic rhetorics. <em>Computers and Composition,</em> 78 (December 2025).</p>
+      <p>Sirc, Geoffrey. (2002). <em>English composition as a happening.</em> Utah State University Press.</p>
       <p>Sousanis, Nick. (2015). <em>Unflattening.</em> Harvard University Press.</p>
       <p>Sterne, Jonathan. (Ed.). (2012). <em>The sound studies reader.</em> Routledge.</p>
       <h4>AI Statement</h4>
